--- a/src/index.html
+++ b/src/index.html
@@ -17,21 +17,21 @@
                 <i class="fas fa-search" onclick=""></i>
             </div>
             <div class="col-12">
-                <a href="index.html">I'm Foodie</a>
+                <a href="index.html">I'm BiteCal</a>
             </div>
         </div>
         <div class="sideNav">
-            <a href="index.html">I'm Foodie</a>
-            <a href="foodie-calendar.html">Foodie Calendar</a>
-            <a href="foodie-log.html">Foodie Log</a>
-            <a href="foodie-star.html">Foodie Star</a>
+            <a href="index.html">I'm BiteCal</a>
+            <a href="calendar.html">BiteCal Calendar</a>
+            <a href="log.html">BiteCal Log</a>
+            <a href="star.html">BiteCal Star</a>
         </div>
     </header>
 
     <section class="description">
         <div class="row">
             <div class="col-12">
-                <p class="title">&#x1F389 Welcome to I'm Foodie.</p>
+                <p class="title">&#x1F389 Welcome to I'm BiteCal.</p>
                 <p class="content">&#x1F60D Create your own food calendar</p>
                 <p class="content">&#x2728 Share your food log with others</p>
             </div>
@@ -40,28 +40,28 @@
 
     <section class="image-card">
         <div class="row">
-            <a href="foodie-calendar.html">
+            <a href="calendar.html">
                 <div class="image-text-container col-12 col-sm-4">
                     <div class="top-left">
-                        <h2>Foodie Calendar</h2>
+                        <h2>BiteCal Calendar</h2>
                         <p>Write your own food log</p>
                         <p>Start Writing <i class="fas fa-arrow-right"></i></p>
                     </div>
                 </div>
             </a>
-            <a href="foodie-log.html">
+            <a href="log.html">
                 <div class="image-text-container col-12 col-sm-4">
                     <div class="top-left">
-                        <h2>Foodie Log</h2>
+                        <h2>BiteCal Log</h2>
                         <p>See others' food logs</p>
                         <p>View Now <i class="fas fa-arrow-right"></i></p>
                     </div>
                 </div>
             </a>
-            <a href="foodie-star.html">
+            <a href="star.html">
                 <div class="image-text-container col-12 col-sm-4">
                     <div class="top-left">
-                        <h2>Foodie Star</h2>
+                        <h2>BiteCal Star</h2>
                         <p>Find food log stars</p>
                         <p>Discover <i class="fas fa-arrow-right"></i></p>
                     </div>
