Add new files and updates

--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@ title: "BiteCal"
 <section class="description">
     <div class="row">
         <div class="col-12">
-            <p class="title">&#x1F389 BiteCal 에 오신것을 환영합니다.</p>
-            <p class="content">&#x1F60D 나만의 음식 캘린더를 만들어 보세요</p>
-            <p class="content">&#x2728 음식 로그를 서로 공유해 보세요</p>
+            <p class="title">&#x1F389  Welcome to BiteCal!</p>
+            <p class="content">&#x1F60D Create your very own food calendar.</p>
+            <p class="content">&#x2728 Share your food logs with others.</p>
         </div>
     </div>
 </section>
 
 <section class="image-card">
   <div class="row">
-    <a href="bite-calendar.html" class="card">
+    <a href="src/calendar.html" class="card">
       <img src="{{ '/assets/images/food1.jpg' | relative_url }}" alt="BiteCalender">
       <h2>BiteCalender</h2>
-      <p>나만의 푸드 로그를 작성해보세요</p>
+      <p>Create your own food calendar.</p>
     </a>
-    <a href="bite-log.html" class="card">
+    <a href="log.html" class="card">
       <img src="{{ '/assets/images/food2.jpg' | relative_url }}" alt="BiteLog">
       <h2>BiteLog</h2>
-      <p>다른 사람의 푸드 로그를 구경 해보세요</p>
+      <p>Create your own food log.</p>
     </a>
-    <a href="bite-star.html" class="card">
+    <a href="star.html" class="card">
       <img src="{{ '/assets/images/food3.jpg' | relative_url }}" alt="BiteStar">
       <h2>BiteStar</h2>
-      <p>푸드 로그 스타를 찾아보세요</p>
+      <p>Rate and review your food logs.</p>
     </a>
   </div>
 </section>
