--- a/src/calendar.html
+++ b/src/calendar.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+---
+layout: default
+title: "BiteCal Calendar"
+---
+
+<header>
+  <h1 class="calendar-header">My Food Calendar</h1>
+</header>
+
+<div id="calendar" class="calendar">
+  <!-- 캘린더가 JavaScript로 생성됩니다 -->
+</div>
+
+<script src="{{ '/assets/js/calendar.js' | relative_url }}"></script>
