--- a/src/calendar.html
+++ b/src/calendar.html
@@ -1,11 +1,109 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+---
+layout: default
+title: Calendar
+---
+<main class="calendar-page">
+    <h1>Meal Calendar</h1>
+    <div id="calendar"></div>
+    <button id="add-log-button" class="btn">Add New Log</button>
+</main>
+
+<script>
+    // Create a basic calendar for the current month
+    const today = new Date();
+    const year = today.getFullYear();
+    const month = today.getMonth(); // 0 = January
+
+    const calendarContainer = document.getElementById('calendar');
+
+    function renderCalendar(year, month) {
+        const firstDay = new Date(year, month, 1).getDay(); // Day of the week (0 = Sunday)
+        const daysInMonth = new Date(year, month + 1, 0).getDate(); // Total days in the month
+
+        let calendarHTML = '<table>';
+        calendarHTML += '<thead><tr>';
+        ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'].forEach(day => {
+            calendarHTML += `<th>${day}</th>`;
+        });
+        calendarHTML += '</tr></thead>';
+
+        calendarHTML += '<tbody><tr>';
+
+        for (let i = 0; i < firstDay; i++) {
+            calendarHTML += '<td></td>'; // Empty cells for days before the first day of the month
+        }
+
+        for (let day = 1; day <= daysInMonth; day++) {
+            const date = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
+            calendarHTML += `<td class="calendar-day" data-date="${date}">${day}</td>`;
+            if ((day + firstDay) % 7 === 0) calendarHTML += '</tr><tr>'; // New row for the next week
+        }
+
+        calendarHTML += '</tr></tbody></table>';
+        calendarContainer.innerHTML = calendarHTML;
+    }
+
+    renderCalendar(year, month);
+
+    // Add event listener to each calendar day
+    calendarContainer.addEventListener('click', (e) => {
+        if (e.target.classList.contains('calendar-day')) {
+            const selectedDate = e.target.dataset.date;
+            localStorage.setItem('selectedDate', selectedDate); // Save selected date
+            window.location.href = '/log.html'; // Redirect to log page
+        }
+    });
+
+    // Add New Log Button
+    document.getElementById('add-log-button').addEventListener('click', () => {
+        localStorage.setItem('selectedDate', new Date().toISOString().split('T')[0]); // Default to today
+        window.location.href = '/log.html';
+    });
+</script>
+
+<style>
+    main.calendar-page {
+        font-family: 'Nanum Gothic Coding', monospace;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        text-align: center;
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 20px 0;
+    }
+
+    th, td {
+        width: 14.28%;
+        height: 50px;
+        text-align: center;
+        border: 1px solid #ccc;
+    }
+
+    .calendar-day {
+        cursor: pointer;
+        background-color: #f9f9f9;
+    }
+
+    .calendar-day:hover {
+        background-color: #e9e9e9;
+    }
+
+    .btn {
+        margin-top: 20px;
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .btn:hover {
+        background-color: #45a049;
+    }
+</style>
